# tastest-serverless

./: .gitignore  DockerFile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.txt
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _operator.data.json  _operator.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  atexit.data.json  atexit.meta.json  base64.data.json  base64.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  dis.data.json  dis.meta.json  enum.data.json  enum.meta.json  (+60 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/attr/: __init__.data.json  __init__.meta.json  _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  filters.data.json  (+6 more)
lambda/: index.py
lambda/mediapipe_processing/: lambda_function.py  requirements.txt
tastest_serverless/: tastest_serverless_stack.py
tests/unit/: test_tastest_serverless_stack.py
(+172 files in other folders)
